fixed overflowing leaf

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
 * {
     margin: 0;
     padding: 0;
-    /* overflow-x: hidden; */
+
+}
+
+body {
+    overflow-x: hidden;
 }
 
 a {
@@ -26,7 +30,7 @@ a {
 
 /* navbar styling */
 
-.nav-contact-icons i{
+.nav-contact-icons i {
     font-size: 1.25rem;
     margin-left: 0.25rem;
 }
@@ -45,7 +49,7 @@ nav {
 
 nav a {
     color: black;
-    margin-right: 1rem ;
+    margin-right: 1rem;
 }
 
 .logo {
@@ -79,19 +83,16 @@ nav a {
 
 .hero-img {
     height: 37rem;
-    justify-self: end;
 }
 
-.hero-text{
+.hero-text {
     color: #ffffff;
     z-index: 2;
 }
 
-.hero-leaf {
-    position: absolute;
-}
 
 .leaf1 {
+    position: absolute;
     top: 360px;
     left: -20px;
     transform: rotate(-90deg);
@@ -101,32 +102,29 @@ nav a {
 
 
 .leaf2 {
+    position: absolute;
     top: 440px;
-    right: 0px;
+    right: -0px;
     transform: rotate(95deg);
     height: 28rem;
 }
 
 /* featured products section after hero */
-.new-coln{
+.new-coln {
     height: 620px;
     /* background-color: #a5f0c5; */
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items:center;
     padding-top: 4rem;
 }
 
 .new-coln-heading {
     font-size: 2.7rem;
 }
-.new-coln-products{
+
+.new-coln-products {
     padding-top: 2rem;
 }
-.new-coln-items {
-    height: 22rem;
-    width: 16rem;
-    border: 2px solid black;
-    display: inline-block;
-    background-color: #fdfdfd;
-}
+
+
